--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/morgan": "^1.9.9"
   }
 }
