--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+NODE_ENV = "development"
+
 PORT=2024
 JWT_SECRET="my_first_JWT_secret_key"
+
 MONGO_DB_URL="mongodb://127.0.0.1:27017/MyProject"
+ATLAS_URL=""
+
